@@ -1,4 +1,4 @@
-# $Id: version,v 1.26.2.17.2.31.4.1 2008/05/22 21:11:13 each Exp $
+# $Id: version,v 1.29.134.23.2.3 2009/07/28 13:57:27 marka Exp $
 #
 # This file must follow /bin/sh rules.  It is imported directly via
 # configure.
@@ -7,4 +7,4 @@ MAJORVER=9
 MINORVER=3
 PATCHVER=4
 RELEASETYPE=-P
-RELEASEVER=1.1
+RELEASEVER=1.2
